# PCG_ECG_SDcard_Web

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  app_config.h  ecg_adc.c  ecg_adc.h  file_crc32.c  file_crc32.h  i2s_mic.c  i2s_mic.h  main.c  sd_writer.c  sd_writer.h  web_server.c  web_server.h
